// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationAdminPage /> renders correctly 1`] = `
<div
  className="box-content"
>
  <div
    className="row"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Permettre l'inscription
    </Col>
  </div>
  <h4>
    Réseaux sociaux
  </h4>
  <p>
    Permettre l'inscription via :
  </p>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Facebook
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Google
    </Col>
  </div>
  <h4>
    Autorisation
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Limiter l'inscription à certains noms de domaine
    </Col>
  </div>
  <h4>
    Données recueillies
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Nom ou pseudonyme
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Mot de passe
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Code postal
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Statut
    </Col>
  </div>
  <Well
    bsClass="div"
  >
    <p
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      <strong>
        Champ(s) supplémentaire(s)
      </strong>
    </p>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="box-content__toolbar"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      Ajouter
    </Button>
  </Well>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <p>
        <strong>
          <FormattedMessage
            id="registration.enable_consent_external_communication.title"
            values={Object {}}
          />
        </strong>
        <br />
        <FormattedMessage
          id="registration.enable_consent_external_communication.subtitle"
          values={
            Object {
              "link": <a
                className="external-link"
                href="about:///admin/settings/settings.global/list"
              >
                <FormattedMessage
                  id="proposal.admin.general"
                  values={Object {}}
                />
              </a>,
            }
          }
        />
      </p>
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        disabled={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Je ne suis pas un robot
    </Col>
  </div>
  <h3>
    Communication
  </h3>
  <Connect(ReduxForm) />
</div>
`;

exports[`<RegistrationAdminPage /> renders correctly when not super admin 1`] = `
<div
  className="box-content"
>
  <div
    className="row"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Permettre l'inscription
    </Col>
  </div>
  <h4>
    Réseaux sociaux
  </h4>
  <p>
    Permettre l'inscription via :
  </p>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Facebook
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Google
    </Col>
  </div>
  <h4>
    Autorisation
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Limiter l'inscription à certains noms de domaine
    </Col>
  </div>
  <h4>
    Données recueillies
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Nom ou pseudonyme
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Mot de passe
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Code postal
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Statut
    </Col>
  </div>
  <Well
    bsClass="well"
  >
    <p
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      <Alert
        bsClass="alert"
        bsStyle="info"
        closeLabel="Close alert"
      >
        Cette section est modifiable uniquement par votre administrateur cap-collectif.
      </Alert>
      <strong>
        Champ(s) supplémentaire(s)
      </strong>
    </p>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="box-content__toolbar"
      disabled={true}
      onClick={null}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      Ajouter
    </Button>
  </Well>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <p>
        <strong>
          <FormattedMessage
            id="registration.enable_consent_external_communication.title"
            values={Object {}}
          />
        </strong>
        <br />
        <FormattedMessage
          id="registration.enable_consent_external_communication.subtitle"
          values={
            Object {
              "link": <a
                className="external-link"
                href="about:///admin/settings/settings.global/list"
              >
                <FormattedMessage
                  id="proposal.admin.general"
                  values={Object {}}
                />
              </a>,
            }
          }
        />
      </p>
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        disabled={true}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Je ne suis pas un robot
    </Col>
  </div>
  <h3>
    Communication
  </h3>
  <Connect(ReduxForm) />
</div>
`;
